// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar Component renders as expected in download mode 1`] = `
<div
  className="blue spacing"
>
  <nav
    className="navbar navbar-expand-md sticky-top"
  >
    <div
      className="container-fluid"
    >
      <a
        className="navbar-brand"
        href="https://ca.nttdata.com/en/"
      >
        <img
          alt="s3 logo"
          height="40px"
          src="undefined/images/s3.svg"
          width="55px"
        />
      </a>
      <span
        className="links"
        onClick={[MockFunction]}
        onKeyDown={[MockFunction]}
        role="button"
        tabIndex="0"
      >
        Upload
      </span>
    </div>
  </nav>
  <p
    className="main-heading"
  >
    Secure File Upload & Storage
  </p>
</div>
`;

exports[`NavBar Component renders as expected in upload mode 1`] = `
<div
  className="blue spacing"
>
  <nav
    className="navbar navbar-expand-md sticky-top"
  >
    <div
      className="container-fluid"
    >
      <a
        className="navbar-brand"
        href="https://ca.nttdata.com/en/"
      >
        <img
          alt="s3 logo"
          height="40px"
          src="undefined/images/s3.svg"
          width="55px"
        />
      </a>
      <span
        className="links"
        onClick={[MockFunction]}
        onKeyDown={[MockFunction]}
        role="button"
        tabIndex="0"
      >
        Get Files
      </span>
    </div>
  </nav>
  <p
    className="main-heading"
  >
    Secure File Upload & Storage
  </p>
</div>
`;
